[gd_scene load_steps=8 format=3 uid="uid://cffhw5w7xcqjp"]

[ext_resource type="Script" uid="uid://dh7g2uv6wrydj" path="res://model/pause/settings.gd" id="1_ebnl0"]
[ext_resource type="Texture2D" uid="uid://cqwsm3uxbo3v1" path="res://assets/shop/shop_background.png" id="2_2rtjg"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="3_8muv4"]
[ext_resource type="Texture2D" uid="uid://o733whwy2vr8" path="res://assets/button/main_button/button.png" id="4_3vyf4"]
[ext_resource type="Texture2D" uid="uid://3lhq2yd4r5q4" path="res://assets/button/main_button/button_click.png" id="5_hfvme"]
[ext_resource type="Texture2D" uid="uid://dnfig8oii5wci" path="res://assets/button/main_button/button_hover.png" id="6_ctr4k"]
[ext_resource type="Script" uid="uid://djv63s70hb3cg" path="res://model/button/masked_button.gd" id="7_uqmjc"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_ebnl0")

[node name="PanelAntiClick" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TRectBackground" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -673.25
offset_top = -475.0
offset_right = 673.25
offset_bottom = 475.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2rtjg")

[node name="LabelTitle" type="RichTextLabel" parent="TRectBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.143
anchor_right = 0.5
anchor_bottom = 0.143
offset_left = -175.75
offset_top = -41.850006
offset_right = 175.75
offset_bottom = 42.149994
grow_horizontal = 2
theme_override_colors/default_color = Color(0.5372549, 0.8117647, 0.9411765, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("3_8muv4")
bbcode_enabled = true
text = "[center][font_size=65]OPTIONS
"
scroll_active = false

[node name="VBoxParametres" type="VBoxContainer" parent="TRectBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.49600002
anchor_right = 0.5
anchor_bottom = 0.49600002
offset_left = -332.0
offset_top = -138.57501
offset_right = 332.0
offset_bottom = 138.42499
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="VBoxVolumeMusics" type="VBoxContainer" parent="TRectBackground/VBoxParametres"]
layout_mode = 2

[node name="LabelMusics" type="Label" parent="TRectBackground/VBoxParametres/VBoxVolumeMusics"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_8muv4")
theme_override_font_sizes/font_size = 30
text = "Musique"

[node name="SliderMusics" type="HSlider" parent="TRectBackground/VBoxParametres/VBoxVolumeMusics"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VBoxVolumeSounds" type="VBoxContainer" parent="TRectBackground/VBoxParametres"]
layout_mode = 2

[node name="LabelSounds" type="Label" parent="TRectBackground/VBoxParametres/VBoxVolumeSounds"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_8muv4")
theme_override_font_sizes/font_size = 30
text = "Effets  sonores"

[node name="SliderSounds" type="HSlider" parent="TRectBackground/VBoxParametres/VBoxVolumeSounds"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="ButtonFullScreen" type="CheckButton" parent="TRectBackground/VBoxParametres"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_8muv4")
theme_override_font_sizes/font_size = 30
text = "Plein  Ã©cran"

[node name="ButtonBack" type="TextureButton" parent="TRectBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.772
anchor_right = 0.5
anchor_bottom = 0.772
offset_left = -142.0003
offset_top = -64.2251
offset_right = 142.0003
offset_bottom = 64.599976
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_3vyf4")
texture_pressed = ExtResource("5_hfvme")
texture_hover = ExtResource("6_ctr4k")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_uqmjc")

[node name="LabelBack" type="RichTextLabel" parent="TRectBackground/ButtonBack"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.65500003
anchor_right = 0.5
anchor_bottom = 0.65500003
offset_left = -106.197174
offset_top = -33.467888
offset_right = 106.197174
offset_bottom = 33.532112
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_8muv4")
bbcode_enabled = true
text = "[center][font_size=32]Retour"
metadata/_edit_use_anchors_ = true

[connection signal="value_changed" from="TRectBackground/VBoxParametres/VBoxVolumeMusics/SliderMusics" to="." method="_on_musique_slider_value_changed"]
[connection signal="value_changed" from="TRectBackground/VBoxParametres/VBoxVolumeSounds/SliderSounds" to="." method="_on_effet_slider_value_changed"]
[connection signal="toggled" from="TRectBackground/VBoxParametres/ButtonFullScreen" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="TRectBackground/ButtonBack" to="." method="_on_reround_button_pressed"]
